Renamed lib.rs to graph.rs
Seemed like a more logical name for the source file.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Harry J. Braviner <harry.braviner@gmail.com>"]
 
 [lib]
 name = "graph"
-path = "src/lib.rs"
+path = "src/graph.rs"
 
 [dependencies]
